# slurm

./: Makefile.in  NEWS  RELEASE_NOTES  aclocal.m4  config.h.in  configure  configure.ac  index.html  params.json  slurm.spec
auxdir/: Makefile.in  config.guess  config.sub  ltmain.sh  x_ac_aix.m4  x_ac_debug.m4
contribs/: Makefile.am  Makefile.in  README
contribs/cray/: Makefile.in
contribs/cray/csm/: Makefile.in
contribs/lua/: Makefile.in
contribs/mic/: Makefile.in
contribs/openlava/: Makefile.in
contribs/pam/: Makefile.in
contribs/pam_slurm_adopt/: Makefile.in
contribs/perlapi/: Makefile.in
contribs/perlapi/libslurm/: Makefile.in
contribs/perlapi/libslurmdb/: Makefile.in
contribs/phpext/: Makefile.in
contribs/pmi2/: Makefile.in
contribs/seff/: Makefile.in
contribs/sgather/: Makefile.in
contribs/sgi/: Makefile.in
contribs/simulator/: Makefile.am  Makefile.in  README  comm_protocol.h  exec_sim.pl  exec_slurmctld.sh  exec_slurmd.sh  list_trace.c  rsv_trace_builder.c  sim_ctlr.c  sim_lib.c  sim_mgr.c  sim_trace.h  slurm_sim.pl  trace_builder.c  update_trace.c
contribs/sjobexit/: Makefile.in
contribs/torque/: Makefile.in
doc/: Makefile.in
doc/html/: Makefile.in  loadleveler.shtml  slurmctld_plugstack.shtml
doc/man/: Makefile.in
doc/man/man1/: Makefile.in  salloc.1  sbatch.1  scontrol.1  squeue.1  srun.1  sstat.1
doc/man/man3/: Makefile.in
doc/man/man5/: Makefile.in  slurm.conf.5
doc/man/man8/: Makefile.in
etc/: Makefile.in
slurm/: slurm.h.in  slurm_errno.h  slurmdb.h
src/: Makefile.in
src/api/: Makefile.in  allocate.c  allocate_msg.c  complete.c  config_info.c  job_info.c  load_leveler.c  node_info.c  partition_info.c  pmi.c  pmi_server.c  reconfigure.c  slurm_pmi.c  step_ctx.c  step_ctx.h  step_io.c  step_launch.c
src/bcast/: Makefile.in
src/common/: Makefile.am  Makefile.in  eio.c  env.c  env.h  forward.c  hostlist.c  hostlist.h  mpi.c  read_config.c  slurm_accounting_storage.c  slurm_accounting_storage.h  slurm_errno.c  slurm_mpi.h  slurm_protocol_api.c  slurm_protocol_api.h  slurm_protocol_defs.c  slurm_protocol_defs.h  slurm_protocol_pack.c  slurm_route.c  slurm_step_layout.c  slurmdb_defs.c  slurmdb_pack.c  slurmdbd_defs.c  slurmdbd_defs.h
src/database/: Makefile.in
src/db_api/: Makefile.in
src/layouts/: Makefile.in
src/layouts/power/: Makefile.in
src/layouts/unit/: Makefile.in
src/plugins/: Makefile.in
src/plugins/accounting_storage/: Makefile.in
src/plugins/acct_gather_energy/: Makefile.in
src/plugins/acct_gather_filesystem/: Makefile.in
src/plugins/acct_gather_infiniband/: Makefile.in
src/plugins/acct_gather_profile/: Makefile.in
src/plugins/auth/: Makefile.in
src/plugins/burst_buffer/: Makefile.in
src/plugins/checkpoint/: Makefile.in
src/plugins/core_spec/: Makefile.in
src/plugins/crypto/: Makefile.in
src/plugins/ext_sensors/: Makefile.in
src/plugins/gres/: Makefile.in
src/plugins/job_container/: Makefile.in
src/plugins/job_submit/: Makefile.in
src/plugins/jobacct_gather/: Makefile.in
src/plugins/jobcomp/: Makefile.in
src/plugins/launch/: Makefile.in
src/plugins/mcs/: Makefile.in
src/plugins/mpi/: Makefile.in
src/plugins/node_features/: Makefile.in
src/plugins/power/: Makefile.in
src/plugins/preempt/: Makefile.in
src/plugins/priority/: Makefile.in
src/plugins/proctrack/: Makefile.in
src/plugins/route/: Makefile.in
src/plugins/sched/: Makefile.in
src/plugins/select/: Makefile.in
src/plugins/slurmctld/xtconsumer/: Makefile.am  Makefile.in  xtconsumer.c
src/sacct/: Makefile.in  options.c  print.c  sacct.c  sacct.h
src/sacctmgr/: Makefile.in  config_functions.c  sacctmgr.c
src/salloc/: Makefile.in  opt.c  opt.h  salloc.c
src/sattach/: Makefile.in
src/sbatch/: Makefile.in  opt.c  opt.h  sbatch.c
src/sbcast/: Makefile.in
src/scancel/: Makefile.in  opt.c  scancel.c  scancel.h
src/scontrol/: Makefile.in  info_job.c  info_node.c  info_part.c  scontrol.c  scontrol.h
src/sdiag/: Makefile.in
src/sinfo/: Makefile.in
src/slurmctld/: Makefile.in  agent.c  backup.c  controller.c  job_mgr.c  job_scheduler.c  node_mgr.c  node_scheduler.c  port_mgr.c  port_mgr.h  preempt.c  preempt.h  proc_req.c  read_config.c  slurmctld.h  srun_comm.c  step_mgr.c
src/slurmd/: Makefile.in
src/slurmdbd/: Makefile.in  proc_req.c
src/smap/: Makefile.in
src/smd/: Makefile.in
src/sprio/: Makefile.in
src/squeue/: Makefile.in  opts.c  print.c  print.h  sort.c  squeue.c  squeue.h
src/sreport/: Makefile.in
src/srun/: Makefile.in  load_leveler.c  srun.c
src/srun_cr/: Makefile.in
src/sshare/: Makefile.in
src/sstat/: Makefile.in  print.c  sstat.c  sstat.h
src/strigger/: Makefile.in
src/sview/: Makefile.in  popups.c
testsuite/: Makefile.in
testsuite/expect/: Makefile.in  README  globals  test1.5  test30.1  test37.16
testsuite/slurm_unit/: Makefile.in
(+177 files in other folders)
